# isaacsim-demo

./: .dockerignore  .gitignore  LICENSE.resim  README.md  README.resim.md  all_topics.txt  entrypoint.sh  isaac.dockerfile  pass.txt  rebuild.sh  resim_experience_sync.yaml
.claude/: settings.local.json
.cursor/rules/: resim-metrics-2.mdc
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
.resim/metrics/: config.resim.yml  config.yml  report.resim.yml
.resim/metrics/templates/: raw.liquid  strip.liquid
builds/: docker-compose.gui.yml  docker-compose.local.yml  docker-compose.yml
builds/isaacsim/: entrypoint.sh  isaacsim.cache.dockerfile  isaacsim.dockerfile
builds/isaacsim/shader-cache-images/: README.md
builds/nav2/: entrypoint.sh  nav2.dockerfile
goals/: goals_2.txt  goals_4.txt  goals_5.txt
humble_ws/: fastdds.xml  requirements.txt
humble_ws/src/obstacle_generator/: package.xml  setup.cfg  setup.py
humble_ws/src/obstacle_generator/launch/: cleanup_obstacles.launch.py  obstacle_generator.launch.py
humble_ws/src/obstacle_generator/obstacle_generator/: cleanup_obstacles.py  obstacle_generator.py  obstacle_library.py
metrics/: Dockerfile  entrypoint.sh  metrics.py  requirements.txt
scripts/: build_and_push.sh  demo_in_new_org.sh  download_assets.sh  ecr_compose_env.sh  generate_experiences.py  generate_goals.py  generate_resim_experience_sync.py  obstacle_generator_demo.sh  push.sh  rebuild.sh  rebuild_and_push_cache.sh  rebuild_local.sh  robot_obstacle_generator_encounter.sh  run_demo.sh  upload_assets.sh
(+185 files in other folders)
